--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "nodemon --exec 'mocha -R min'"
+        "test": "mocha"
     },
     "repository": {
         "type": "git",
@@ -22,5 +22,9 @@
         "mocha": "^7.1.2",
         "mysql2": "^2.1.0",
         "supertest": "^4.0.2"
+    },
+    "devDependencies": {
+        "chai": "^4.2.0",
+        "chai-http": "^4.3.0"
     }
 }
