--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "express": "^4.17.1",
         "mocha": "^7.1.2",
         "mysql2": "^2.1.0",
-        "supertest": "^4.0.2"
+        "supertest": "^4.0.2",
+        "swagger-jsdoc": "^4.0.0",
+        "swagger-ui-express": "^4.1.4"
     },
     "devDependencies": {
         "chai": "^4.2.0",
